# actions

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml  type-checking.yml
evaluate-openai-finetune/: action.yml
evaluate-system-prompt/: action.yml
multiturn-evaluate-openai-finetune/: action.yml
multiturn-evaluate-system-prompt/: action.yml
singleturn-evaluate-openai-finetune/: action.yml
singleturn-evaluate-system-prompt/: action.yml
src/actions/: common.py  evaluate_openai_finetune.py  evaluate_system_prompt.py  main.py  multiturn_evaluate_openai_finetune.py  multiturn_evaluate_system_prompt.py  singleturn_evaluate_openai_finetune.py  singleturn_evaluate_system_prompt.py
