[project]
name = "actions"
version = "0.1.0"
description = "Interface from GitHub Actions to the Circuit Breaker Labs Python client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "circuit-breaker-labs>=1.0.4",
]

[project.scripts]
cli = "actions.main:cli"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.uv]
package = true
