[project]
name = "actions"
version = "0.1.0"
description = "Interface from GitHub Actions to the Circuit Breaker Labs Python client"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Arul Nigam", email = "arul@circuitbreakerlabs.ai"},
    {name = "Shirali Nigam", email = "shirali@circuitbreakerlabs.ai"},
    {name = "Wyatt Avilla", email = "wyatt@circuitbreakerlabs.ai"},
]
dependencies = [
    "circuit-breaker-labs==1.0.5",
]

[project.scripts]
evaluate-system-prompt = "actions.evaluate_system_prompt:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.14.7",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "build",
]

target-version = "py313"

[ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "T",
    "UP",
    "SIM",
]

[tool.uv.build-backend]
module-root = "src"

[tool.uv]
package = true
